カテゴリー整理

--- a/_posts/2023-06-21-expo.md
+++ b/_posts/2023-06-21-expo.md
@@ -15,11 +15,11 @@ tags: event
 ## 対象作品
 以下のジャンルで応募可能です（どんなプログラミング言語でもOK）。
 - Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）
-- マインクラフト（マインクラフトのワールド、プログラムなど）
 - Scratch以外の言語による作品（Python、Ruby、p5jsなどどんな言語でもOK）
+- マインクラフト（マインクラフトのワールド、プログラムなど）
 - Webサイト（HTML/CSS、JavaScript、Pythonなど）
 - モバイルアプリ（スマートフォン・タブレット用アプリ）
-- 電子工作・ロボット（Raspberry Pi、Arduino、micro:bitなど）
+- 電子工作（Raspberry Pi、Arduino、micro:bitなど）
 - ロボット（LEGO、アーテックロボなど）
 
 ## 展示方法
