--- a/_posts/2023-06-21-expo.md
+++ b/_posts/2023-06-21-expo.md
@@ -15,7 +15,7 @@ tags: event
 ## 対象作品
 以下のジャンルで応募可能です（どんなプログラミング言語でもOK）。
 - Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）
-- Scratch以外の言語による作品（Python、Ruby、p5.jsなどどんな言語でもOK）
+- Scratch以外の言語による作品（Python、Ruby、p5.jsなどどんな言語・環境でもOK）
 - マインクラフト（ワールド、レッドストーン回路、MakeCode、Modなど）
 - Webサイト（HTML/CSS、JavaScript、Pythonなど）
 - モバイルアプリ（スマートフォン・タブレット用アプリ）
