--- a/_posts/2023-07-06-keynote.md
+++ b/_posts/2023-07-06-keynote.md
@@ -4,7 +4,7 @@ title: 基調講演に高田和豊様を迎えます
 date: 2023-07-06T08:00:00 UTC+9
 categories: news
 # thumbnail: 
-permalink: /keynote/
+permalink: /posts/keynote/
 ---
 家電メーカーの社員であり人工知能研究者であり、ご自身もクリエイティブから学ぶ機会を作っておられます高田和豊様に基調講演としてご登壇いただくことになりました。
 
