ほぼ完成していますあと自動実行..

--- a/_pages/exhibiton/2023-2.md
+++ b/_pages/exhibiton/2023-2.md
@@ -3,20 +3,36 @@ layout: default
 title: "Pythonで~"
 permalink: /exhibition/2
 ---
-<h1 style="padding-top: 100px;">Pythonで~</h1>
+<h1 style="padding-top: 100px; padding-bottom: 30px; ">Pythonで~</h1>
+{% if "Scratch以外の言語による作品" contains "Scratch（ゲーム、アニメーションなど）" %}
+{% if "https://makenew.panasonic.jp/magazine/articles/045/" contains "https://scratch.mit.edu/projects/" %}
+<iframe src="https://makenew.panasonic.jp/magazine/articles/045/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+{%else%}
+<img class='top-img lazyload' src='../img/2023/exhibition/test.JPG' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />    
+{% endif %}
+{% else %}
 <img class='top-img lazyload' src='../img/2023/exhibition/test.JPG' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />
+{% endif %}
+<p>クリエイター:たくや(coderdojo~)</p>
+<div class="box">
+  <h5>作品の説明</h5>
+  <p>作品の説明~~~~</p>
+</div>
+<div class="box">
+  <h5>参考・参照元、工夫したところ</h5>
+  <p>参考・参照元、工夫したところ...</p>
+</div>
 
- 
-### クリエータ {#creator}
-<p>
-  たくや
-</p>
-<p>参考・参照元、工夫したところ...</p>
-<a href="https://makenew.panasonic.jp/magazine/articles/045/" target="_blank" rel="noopener" class="button">URL</a>
+
+<a href="https://makenew.panasonic.jp/magazine/articles/045/" target="_blank" rel="noopener" class="button air">作品URL</a>
 
 <style type="text/css">
   .prev { display: table-cell; color: white; text-align: left;   }
   .toc  { display: table-cell; color: white; text-align: center; }
   .next { display: table-cell; color: white; text-align: right;  }
   .nav a:link, .nav a:visited { color: white; }
+  iframe{margin: 0 auto}
+  .box{width:450px; margin: 0 auto}
+  .box h5{text-align: left;}
+  .air{margin-bottom:60px;}
 </style>
