--- a/_posts/2023-07-03-expo.md
+++ b/_posts/2023-07-03-expo.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "ニンジャ大博覧会を開催します"
 date: 2023-07-03T09:00:00 UTC+9
-categories: event
+categories: news
 thumbnail: 
 permalink: /expo/
 tags: event
