--- a/_posts/2023-07-06-keynote.md
+++ b/_posts/2023-07-06-keynote.md
@@ -21,6 +21,6 @@ permalink: /posts/keynote/
 - 人工知能分野における人の認知機能のモデル化や認知状態の推定、創造性教育に関する研究に従事. 博士(工学)
 - 2016-2019年には、MIT Media Lab/ Lifelong Kindergarten Group客員研究員としてアメリカに渡り、2023年4月にScratch Home School 〜パナソニックの学校〜を開校。発明的家族、創造的逸脱をキーワードとし、IoT家電などを使った家族でCreative Learningを学ぶ3か月のプログラムを提供している。
 
-## 関連記事
+## 関連リンク
 - [Scratch Home Project](https://laboratory.jpn.panasonic.com/project/hclsteam/){:target="_blank"}
 - [IoT化されたくらしは、最高の学びの場。「パナソニックの学校」で教育事業に進出](https://makenew.panasonic.jp/magazine/articles/045/){:target="_blank"}
