--- a/_posts/2023-07-20-staff.md
+++ b/_posts/2023-07-20-staff.md
@@ -40,7 +40,7 @@ DojoCon Japan {{ site.year }}実行委員会ではこのような方のご参加
 会　場：奈良女子大学 記念館（〒630-8263　奈良県奈良市北魚屋東町）（[Google Maps]({{ site.map }}){:target="_blank"}）
 
 ## 当日スタッフ応募
-応募はこ以下のフォームよりご連絡ください。
+応募は以下のフォームよりご連絡ください。
 
 <div class='framed_button'>
     <a href='https://forms.gle/VDE6sSuBAz3TnC366' target='_blank'>応募フォーム</a>
