同意事項に行動規範を追加

--- a/_posts/2023-07-20-staff.md
+++ b/_posts/2023-07-20-staff.md
@@ -32,7 +32,7 @@ DojoCon Japan {{ site.year }}実行委員会ではこのような方のご参加
 
 ## 参加条件
 - Discordでやり取りができること
-- CoderDojoの活動にご賛同いただけること（初めての方は、事前に説明をさせていただきます）
+- CoderDojoの活動にご賛同いただけること、[行動規範](https://dojocon{{ site.year }}.coderdojo.jp/code-of-conduct/){:target="_blank"}に同意いただけること
 - 未成年者の方は、保護者の同意が必要です
 
 ## 開催日・会場
