--- a/_posts/2023-07-20-staff.md
+++ b/_posts/2023-07-20-staff.md
@@ -39,6 +39,24 @@ DojoCon Japan {{ site.year }}実行委員会ではこのような方のご参加
 開催日：2023年8月27日（日）  
 会　場：奈良女子大学 記念館（〒630-8263　奈良県奈良市北魚屋東町）（[Google Maps]({{ site.map }}){:target="_blank"}）
 
+## よくあるご質問
+- **Ｑ：参加時間は何時からですか？**  
+９時集合です。撤収は１７時３０分より１９時までです
+
+- **Ｑ：終日の参加は難しいのですが、途中参加途中退出できますか？**  
+ご協力いただける方に、参加可能な時間帯を確認させていただきます  
+遠方からの移動のために、設営・撤収などは参加できない方もおられることと思います  
+申し込み多数、または1時間だけなどごく短時間の参加についてはお断りさせていただく場合がありますのでご了承ください
+
+- **Ｑ：荷物を預ける場所はありますか？**  
+スタッフ用の控室を用意する予定ですので置くことができますが、貴重品は必ず身に着けていただくようお願いします
+
+- **Ｑ：駐車場はありますか？**  
+駐車場、駐輪場はありませんので、公共交通機関をご利用ください
+
+- **Ｑ：交通費、食事などは支給されますか？**  
+自費での参加をお願いします。昼食については、希望者に弁当（実費）の手配を予定しております
+
 ## 当日スタッフ応募
 応募は以下のフォームよりご連絡ください。
 
