スタッフ募集締め切り

--- a/_posts/2023-07-20-staff.md
+++ b/_posts/2023-07-20-staff.md
@@ -6,8 +6,9 @@ categories: news
 # thumbnail: 
 permalink: /posts/staff/
 ---
-## DojoCon Japan {{ site.year }}の当日スタッフを募集します！
+**多数の応募をいただきましたので、一旦募集を締め切りました。ご協力を申し出てくださったみなさま、ありがとうございました。**
 
+## DojoCon Japan {{ site.year }}の当日スタッフを募集します！
 奈良で開催される DojoCon Japan {{ site.year }}のお手伝いをしたい！という方はおられませんか？
 
 DojoCon Japan {{ site.year }}実行委員会ではこのような方のご参加をお待ちしております。
