--- a/_posts/2023-07-06-keynote.md
+++ b/_posts/2023-07-06-keynote.md
@@ -2,7 +2,7 @@
 layout: post
 title: 基調講演に高田和豊様を迎えます
 date: 2023-07-06T08:00:00 UTC+9
-categories: news
+categories: session
 thumbnail: /img/2023/ogp/takata-kazutoyo.png
 permalink: /posts/keynote/
 ---
