--- a/_posts/2023-07-18-owakon.md
+++ b/_posts/2023-07-18-owakon.md
@@ -2,7 +2,7 @@
 layout: post
 title: スピーカーに阿部和広様を迎えます
 date: 2023-07-18T05:00:00 UTC+9
-categories: news
+categories: session
 thumbnail: /img/2023/ogp/abe-kazuhiro.png
 permalink: /posts/owakon/
 ---
