🤖 Upsert project page(s) by GitHub Actions

--- a/_pages/exhibition/2023-4.md
+++ b/_pages/exhibition/2023-4.md
@@ -8,10 +8,10 @@ permalink: /exhibition/4
 {% if "https://makenew.panasonic.jp/magazine/articles/045/" contains "https://scratch.mit.edu/projects/" %}
 <iframe src="https://makenew.panasonic.jp/magazine/articles/045/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 {%else%}
-<img class='top-img lazyload' src='../img/2023/exhibition/test.JPG' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />    
+<img class='top-img lazyload' src='../img/2023/exhibition/test.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />    
 {% endif %}
 {% else %}
-<img class='top-img lazyload' src='../img/2023/exhibition/test.JPG' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />
+<img class='top-img lazyload' src='../img/2023/exhibition/test.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />
 {% endif %}
 <p>クリエイター:たくや(coderdojo~)</p>
 <div class="box">
