--- a/_pages/exhibition/2023-1.md
+++ b/_pages/exhibition/2023-1.md
@@ -8,10 +8,10 @@ permalink: /exhibition/1
 {% if "https://scratch.mit.edu/projects/863232799/" contains "https://scratch.mit.edu/projects/" %}
 <iframe src="https://scratch.mit.edu/projects/863232799/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 {%else%}
-<img class='top-img lazyload' src='../img/2023/exhibition/test.JPG' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />    
+<img class='top-img lazyload' src='../img/2023/exhibition/test.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />    
 {% endif %}
 {% else %}
-<img class='top-img lazyload' src='../img/2023/exhibition/test.JPG' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />
+<img class='top-img lazyload' src='../img/2023/exhibition/test.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />
 {% endif %}
 <p>クリエイター:たくや(coderdojo~)</p>
 <div class="box">
