--- a/_pages/exhibition/2023-1.md
+++ b/_pages/exhibition/2023-1.md
@@ -6,7 +6,9 @@ permalink: /exhibition/1
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">Scratchで~</h1>
 {% if "Scratch（ゲーム、アニメーションなど）" contains "Scratch（ゲーム、アニメーションなど）" %}
 {% if "https://scratch.mit.edu/projects/863232799/" contains "https://scratch.mit.edu/projects/" %}
+<div class="scratch-wrapper">
 <iframe src="https://scratch.mit.edu/projects/863232799/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</div>
 {%else%}
 <img class='top-img lazyload' src='../img/2023/exhibition/test.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />    
 {% endif %}
@@ -35,4 +37,21 @@ permalink: /exhibition/1
   .box{width:450px; margin: 0 auto}
   .box h5{text-align: left;}
   .air{margin-bottom:60px;}
+
+  /* scratch wrapper */
+  div.scratch-wrapper {
+    position: relative;
+    padding-bottom: 79%;
+    height: 0;
+    overflow: hidden;
+    margin: 10px 20px;
+  }
+
+  div.scratch-wrapper > iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 </style>
