🤖 Upsert project page(s) by GitHub Actions

--- a/_pages/exhibition/2023-2.md
+++ b/_pages/exhibition/2023-2.md
@@ -6,7 +6,9 @@ permalink: /exhibition/2
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">Pythonで~</h1>
 {% if "Scratch以外の言語による作品" contains "Scratch（ゲーム、アニメーションなど）" %}
 {% if "https://makenew.panasonic.jp/magazine/articles/045/" contains "https://scratch.mit.edu/projects/" %}
-<iframe src="https://makenew.panasonic.jp/magazine/articles/045/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<div class="scratch-wrapper">
+<iframe src="https://makenew.panasonic.jp/magazine/articles/045/embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</div>
 {%else%}
 <img class='top-img lazyload' src='../img/2023/exhibition/test.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />    
 {% endif %}
@@ -35,4 +37,22 @@ permalink: /exhibition/2
   .box{width:450px; margin: 0 auto}
   .box h5{text-align: left;}
   .air{margin-bottom:60px;}
+
+  /* scratch wrapper */
+  @media screen and (max-width: 570px){
+    div.scratch-wrapper > iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+    div.scratch-wrapper {
+      position: relative;
+      padding-bottom: 79%;
+      height: 0;
+      overflow: hidden;
+      margin: 10px 20px;
+    }
+  }
 </style>
