--- a/_pages/exhibition/2023-1.md
+++ b/_pages/exhibition/2023-1.md
@@ -1,30 +1,31 @@
 ---
 layout: default
-title: "Scratchで~"
+title: "コーディングで マレーシアを探索しよう！"
 permalink: /exhibition/1
 ---
-<h1 style="padding-top: 100px; padding-bottom: 30px; ">Scratchで~</h1>
-{% if "Scratch（ゲーム、アニメーションなど）" contains "Scratch（ゲーム、アニメーションなど）" %}
-{% if "https://scratch.mit.edu/projects/863232799/" contains "https://scratch.mit.edu/projects/" %}
-<iframe src="https://scratch.mit.edu/projects/863232799/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<h1 style="padding-top: 100px; padding-bottom: 30px; ">コーディングで マレーシアを探索しよう！</h1>
+{% if "Webサイト（HTML/CSS、JavaScript、Pythonなど）" contains "Scratch（ゲーム、アニメーションなど）" %}
+{% if "https://www.canva.com/design/DAFigu5zJnU/idy37rTovKKAyFa6E4g39A/watch?utm_content=DAFigu5zJnU&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" contains "https://scratch.mit.edu/projects/" %}
+<div class="scratch-wrapper">
+<iframe src="https://www.canva.com/design/DAFigu5zJnU/idy37rTovKKAyFa6E4g39A/watch?utm_content=DAFigu5zJnU&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelinkembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</div>
 {%else%}
-<img class='top-img lazyload' src='../img/2023/exhibition/test.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />    
+<img class='top-img lazyload' src='../img/2023/exhibition/1.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />    
 {% endif %}
 {% else %}
-<img class='top-img lazyload' src='../img/2023/exhibition/test.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />
+<img class='top-img lazyload' src='../img/2023/exhibition/1.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />
 {% endif %}
-<p>クリエイター:たくや(coderdojo~)</p>
+<p>クリエイター:Lily(CoderDojo 前橋、CoderDojo 瑞穂)</p>
 <div class="box">
   <h5>作品の説明</h5>
-  <p>作品の説明~~~~</p>
+  <p>自分が見た景色や模様で、きれいだなと思ったものをJavaScript (p5.js) を使って表現したいと思っています。</p>
 </div>
 <div class="box">
   <h5>参考・参照元、工夫したところ</h5>
-  <p>参考・参照元、工夫したところ...</p>
+  <p>マレーシアのペナン島にある世界遺産のジョージタウンの模様や景色を参考にしています。</p>
 </div>
 
-
-<a href="https://scratch.mit.edu/projects/863232799/" target="_blank" rel="noopener" class="button air">作品URL</a>
+<a href="https://www.canva.com/design/DAFigu5zJnU/idy37rTovKKAyFa6E4g39A/watch?utm_content=DAFigu5zJnU&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank" rel="noopener" class="button air">作品URL</a>
 
 <style type="text/css">
   .prev { display: table-cell; color: white; text-align: left;   }
@@ -32,7 +33,25 @@ permalink: /exhibition/1
   .next { display: table-cell; color: white; text-align: right;  }
   .nav a:link, .nav a:visited { color: white; }
   iframe{margin: 0 auto}
-  .box{width:450px; margin: 0 auto}
+  .box{width:60%; margin: 0 auto;padding-bottom:20px;}
   .box h5{text-align: left;}
   .air{margin-bottom:60px;}
+
+  /* scratch wrapper */
+  @media screen and (max-width: 570px){
+    div.scratch-wrapper > iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+    div.scratch-wrapper {
+      position: relative;
+      padding-bottom: 79%;
+      height: 0;
+      overflow: hidden;
+      margin: 10px 20px;
+    }
+  }
 </style>
