🤖 Upsert project page(s) by GitHub Actions

--- a/_pages/exhibition/2023-1.md
+++ b/_pages/exhibition/2023-1.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "コーディングで マレーシアを探索しよう！"
-permalink: /exhibition/1
+permalink: /expo/1
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">コーディングで マレーシアを探索しよう！</h1>
 {% if "Webサイト（HTML/CSS、JavaScript、Pythonなど）" contains "Scratch（ゲーム、アニメーションなど）" %}
