exhibitionの個々のファイルを生成しました。

--- a/_pages/exhibition/2023-11.md
+++ b/_pages/exhibition/2023-11.md
@@ -1,34 +1,34 @@
 ---
 layout: default
-title: "scratchタイピング"
-permalink: /expo/2
+title: "猫の箱庭"
+permalink: /expo/11
 ---
-<h1 style="padding-top: 100px; padding-bottom: 30px; ">scratchタイピング</h1>
+<h1 style="padding-top: 100px; padding-bottom: 30px; ">猫の箱庭</h1>
 <div class="main_content">
 {% if "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
-{% if "https://scratch.mit.edu/projects/873908710/" contains "https://scratch.mit.edu/projects/" %}
+{% if "https://scratch.mit.edu/projects/782065331/" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
-<iframe src="https://scratch.mit.edu/projects/873908710/embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://scratch.mit.edu/projects/782065331/embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 {%else%}
-<img class='top-img lazyload' src='../img/2023/exhibition/2.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />    
+<img class='top-img lazyload' src='../img/2023/exhibition/11.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />    
 {% endif %}
 {% else %}
-<img class='top-img lazyload' src='../img/2023/exhibition/2.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='../img/2023/exhibition/11.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
-<p>クリエイター:Megane-kun28(coderdojo大船)</p>
+<p>クリエイター:RP(奈良)</p>
 <div class="contents">
   <div class="box">
     <h5>作品の説明</h5>
-    <p>出てきた文字を打つタイピングゲームです。<br>この作品は、普通のタイピングゲームとは違い、出てきた英語の通りに打つゲームです。<br>BGMがないと気分が上がらないと思ったので、BGMにこだわりました。</p>
+    <p>猫が、いろいろなイベントがあいます！！そこで、猫を操作して、長い間いきのこらせましょう！！！カオスイベントは、雷⚡、隕石、暗闇があります。下にある、★、♥、渦巻、☀は、おすと、それぞれの、イベントがはっせいします。町をモチーフにしたワールドでいきのこりましょう！！</p>
   </div>
   <div class="box">
     <h5>参考・参照元、工夫したところ</h5>
-    <p>ないです。</p>
+    <p>僕、めっちゃがんばりました！</p>
   </div>
 </div>
 </div>
-<a href="https://scratch.mit.edu/projects/873908710/" target="_blank" rel="noopener" class="button air">作品URL</a>
+<a href="https://scratch.mit.edu/projects/782065331/" target="_blank" rel="noopener" class="button air">作品URL</a>
 
 <style type="text/css">
   .prev { display: table-cell; color: white; text-align: left;   }
