--- a/_pages/exhibition/2023-17.md
+++ b/_pages/exhibition/2023-17.md
@@ -1,34 +1,34 @@
 ---
 layout: default
-title: "簡単なロブロックスオビー"
-permalink: /expo/4
+title: "モ〜レッツキャッチ！ゲーム"
+permalink: /expo/17
 ---
-<h1 style="padding-top: 100px; padding-bottom: 30px; ">簡単なロブロックスオビー</h1>
+<h1 style="padding-top: 100px; padding-bottom: 30px; ">モ〜レッツキャッチ！ゲーム</h1>
 <div class="main_content">
-{% if "Webサイト（HTML/CSS、JavaScript、Pythonなど）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
-{% if "https://youtu.be/0UymyW3Khu8" contains "https://scratch.mit.edu/projects/" %}
+{% if "電子工作（Raspberry Pi、Arduino、micro:bitなど）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
+{% if "https://ibb.co/WGxZCxS" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
-<iframe src="https://youtu.be/0UymyW3Khu8embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://ibb.co/WGxZCxSembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 {%else%}
-<img class='top-img lazyload' src='../img/2023/exhibition/4.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />    
+<img class='top-img lazyload' src='../img/2023/exhibition/17.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />    
 {% endif %}
 {% else %}
-<img class='top-img lazyload' src='../img/2023/exhibition/4.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='../img/2023/exhibition/17.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
-<p>クリエイター:がんにゃむ(奈良)</p>
+<p>クリエイター:ショーピー256(CoderDojo 倉敷　CoderDojo 吉備岡山)</p>
 <div class="contents">
   <div class="box">
     <h5>作品の説明</h5>
-    <p>簡単過ぎず難しすぎず作りました。</p>
+    <p>micro:bitの付いた投げ縄を振り回して投げて牛を捕まえるゲームです。投げ縄が牛のツノに引っかかると牛が怒りだします。<br>牛の制作は家族全員でやりました。</p>
   </div>
   <div class="box">
     <h5>参考・参照元、工夫したところ</h5>
-    <p>ロブロックスでゲームを作ろう</p>
+    <p>https://eleshop.jp/shop/g/g402628/</p>
   </div>
 </div>
 </div>
-<a href="https://youtu.be/0UymyW3Khu8" target="_blank" rel="noopener" class="button air">作品URL</a>
+<a href="https://ibb.co/WGxZCxS" target="_blank" rel="noopener" class="button air">作品URL</a>
 
 <style type="text/css">
   .prev { display: table-cell; color: white; text-align: left;   }
