--- a/_pages/exhibition/2023-5.md
+++ b/_pages/exhibition/2023-5.md
@@ -1,34 +1,34 @@
 ---
 layout: default
-title: "簡単なロブロックスオビー"
-permalink: /expo/4
+title: "蛇ゲーム"
+permalink: /expo/5
 ---
-<h1 style="padding-top: 100px; padding-bottom: 30px; ">簡単なロブロックスオビー</h1>
+<h1 style="padding-top: 100px; padding-bottom: 30px; ">蛇ゲーム</h1>
 <div class="main_content">
-{% if "Webサイト（HTML/CSS、JavaScript、Pythonなど）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
-{% if "https://youtu.be/0UymyW3Khu8" contains "https://scratch.mit.edu/projects/" %}
+{% if "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
+{% if "https://scratch.mit.edu/projects/880498565/" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
-<iframe src="https://youtu.be/0UymyW3Khu8embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://scratch.mit.edu/projects/880498565/embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 {%else%}
-<img class='top-img lazyload' src='../img/2023/exhibition/4.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />    
+<img class='top-img lazyload' src='../img/2023/exhibition/5.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />    
 {% endif %}
 {% else %}
-<img class='top-img lazyload' src='../img/2023/exhibition/4.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='../img/2023/exhibition/5.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
-<p>クリエイター:がんにゃむ(奈良)</p>
+<p>クリエイター:みのる(CoderDojo吉祥寺)</p>
 <div class="contents">
   <div class="box">
     <h5>作品の説明</h5>
-    <p>簡単過ぎず難しすぎず作りました。</p>
+    <p>一から作りました。得点を変数ではなくスプライトで表示させました。</p>
   </div>
   <div class="box">
     <h5>参考・参照元、工夫したところ</h5>
-    <p>ロブロックスでゲームを作ろう</p>
+    <p>オリジナル作品です。</p>
   </div>
 </div>
 </div>
-<a href="https://youtu.be/0UymyW3Khu8" target="_blank" rel="noopener" class="button air">作品URL</a>
+<a href="https://scratch.mit.edu/projects/880498565/" target="_blank" rel="noopener" class="button air">作品URL</a>
 
 <style type="text/css">
   .prev { display: table-cell; color: white; text-align: left;   }
