--- a/_pages/exhibition/2023-1.md
+++ b/_pages/exhibition/2023-1.md
@@ -4,27 +4,30 @@ title: "コーディングで マレーシアを探索しよう！"
 permalink: /expo/1
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">コーディングで マレーシアを探索しよう！</h1>
-{% if "Webサイト（HTML/CSS、JavaScript、Pythonなど）" contains "Scratch（ゲーム、アニメーションなど）" %}
+<div class="main_content">
+{% if "Webサイト（HTML/CSS、JavaScript、Pythonなど）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
 {% if "https://www.canva.com/design/DAFigu5zJnU/idy37rTovKKAyFa6E4g39A/watch?utm_content=DAFigu5zJnU&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
 <iframe src="https://www.canva.com/design/DAFigu5zJnU/idy37rTovKKAyFa6E4g39A/watch?utm_content=DAFigu5zJnU&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelinkembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 {%else%}
-<img class='top-img lazyload' src='../img/2023/exhibition/1.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />    
+<img class='top-img lazyload' src='../img/2023/exhibition/1.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />    
 {% endif %}
 {% else %}
-<img class='top-img lazyload' src='../img/2023/exhibition/1.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />
+<img class='top-img lazyload' src='../img/2023/exhibition/1.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 <p>クリエイター:Lily(CoderDojo 前橋、CoderDojo 瑞穂)</p>
-<div class="box">
-  <h5>作品の説明</h5>
-  <p>自分が見た景色や模様で、きれいだなと思ったものをJavaScript (p5.js) を使って表現したいと思っています。</p>
+<div class="contents">
+  <div class="box">
+    <h5>作品の説明</h5>
+    <p>自分が見た景色や模様で、きれいだなと思ったものをJavaScript (p5.js) を使って表現したいと思っています。</p>
+  </div>
+  <div class="box">
+    <h5>参考・参照元、工夫したところ</h5>
+    <p>マレーシアのペナン島にある世界遺産のジョージタウンの模様や景色を参考にしています。</p>
+  </div>
 </div>
-<div class="box">
-  <h5>参考・参照元、工夫したところ</h5>
-  <p>マレーシアのペナン島にある世界遺産のジョージタウンの模様や景色を参考にしています。</p>
 </div>
-
 <a href="https://www.canva.com/design/DAFigu5zJnU/idy37rTovKKAyFa6E4g39A/watch?utm_content=DAFigu5zJnU&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank" rel="noopener" class="button air">作品URL</a>
 
 <style type="text/css">
@@ -33,10 +36,25 @@ permalink: /expo/1
   .next { display: table-cell; color: white; text-align: right;  }
   .nav a:link, .nav a:visited { color: white; }
   iframe{margin: 0 auto}
-  .box{width:60%; margin: 0 auto;padding-bottom:20px;}
+  .box{width:auto; margin: 0 auto;padding-bottom:20px;}
   .box h5{text-align: left;}
+  .box p{text-align: left;}
   .air{margin-bottom:60px;}
-
+  .contents{width:auto; margin: 0 auto;padding:5px;}
+  /*content*/
+  .main_content{
+    display: block;
+    margin: 0 auto 12px;
+    text-align: center;
+    text-decoration: none;
+    width: 40%;
+  }
+  @media screen and (max-width: 1000px) {
+    .main_content {
+     padding: 8px 0;
+     width: 80%;
+   }
+  }      
   /* scratch wrapper */
   @media screen and (max-width: 570px){
     div.scratch-wrapper > iframe {
