--- a/_pages/exhibition/2023-13.md
+++ b/_pages/exhibition/2023-13.md
@@ -1,34 +1,34 @@
 ---
 layout: default
-title: "scratchタイピング"
-permalink: /expo/2
+title: "鹿さんゲーム"
+permalink: /expo/13
 ---
-<h1 style="padding-top: 100px; padding-bottom: 30px; ">scratchタイピング</h1>
+<h1 style="padding-top: 100px; padding-bottom: 30px; ">鹿さんゲーム</h1>
 <div class="main_content">
 {% if "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
-{% if "https://scratch.mit.edu/projects/873908710/" contains "https://scratch.mit.edu/projects/" %}
+{% if "https://scratch.mit.edu/projects/881807418/" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
-<iframe src="https://scratch.mit.edu/projects/873908710/embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://scratch.mit.edu/projects/881807418/embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 {%else%}
-<img class='top-img lazyload' src='../img/2023/exhibition/2.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />    
+<img class='top-img lazyload' src='../img/2023/exhibition/13.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />    
 {% endif %}
 {% else %}
-<img class='top-img lazyload' src='../img/2023/exhibition/2.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='../img/2023/exhibition/13.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
-<p>クリエイター:Megane-kun28(coderdojo大船)</p>
+<p>クリエイター:みづき(尾張)</p>
 <div class="contents">
   <div class="box">
     <h5>作品の説明</h5>
-    <p>出てきた文字を打つタイピングゲームです。<br>この作品は、普通のタイピングゲームとは違い、出てきた英語の通りに打つゲームです。<br>BGMがないと気分が上がらないと思ったので、BGMにこだわりました。</p>
+    <p>このゲームは鹿さんを矢印キーで左右に動かして、鹿せんべいを取るゲームです。<br>鹿せんべいを取ると音が出て、スコアが1上がります。ニンニクとトウガラシを取ってもスコアは上がりません。<br>時間制限は60秒です。<br><br>工夫したところは、BGMをつけたところです。</p>
   </div>
   <div class="box">
     <h5>参考・参照元、工夫したところ</h5>
-    <p>ないです。</p>
+    <p>スプライトや背景のイラストを下記より参照しました。<br>鹿さん　piclike.net<br>鹿せんべい　blogspot.com<br>ニンニク　tsukatte.com<br>トウガラシ　yamakawa-pharm.jp<br>背景　jpdiamukpictz6q7.blogspot.com</p>
   </div>
 </div>
 </div>
-<a href="https://scratch.mit.edu/projects/873908710/" target="_blank" rel="noopener" class="button air">作品URL</a>
+<a href="https://scratch.mit.edu/projects/881807418/" target="_blank" rel="noopener" class="button air">作品URL</a>
 
 <style type="text/css">
   .prev { display: table-cell; color: white; text-align: left;   }
