--- a/_pages/exhibition/2023-3.md
+++ b/_pages/exhibition/2023-3.md
@@ -1,32 +1,34 @@
 ---
 layout: default
-title: "Pythonで~"
-permalink: /exhibition/3
+title: "コース攻略したぞ！"
+permalink: /expo/3
 ---
-<h1 style="padding-top: 100px; padding-bottom: 30px; ">Pythonで~</h1>
-{% if "Scratch以外の言語による作品" contains "Scratch（ゲーム、アニメーションなど）" %}
-{% if "https://makenew.panasonic.jp/magazine/articles/045/" contains "https://scratch.mit.edu/projects/" %}
+<h1 style="padding-top: 100px; padding-bottom: 30px; ">コース攻略したぞ！</h1>
+<div class="main_content">
+{% if "ロボット（toio、LEGO、アーテックなど）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
+{% if "https://youtu.be/Cl0zPaBE8TE" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
-<iframe src="https://makenew.panasonic.jp/magazine/articles/045/embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://youtu.be/Cl0zPaBE8TEembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 {%else%}
-<img class='top-img lazyload' src='../img/2023/exhibition/test.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />    
+<img class='top-img lazyload' src='../img/2023/exhibition/3.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />    
 {% endif %}
 {% else %}
-<img class='top-img lazyload' src='../img/2023/exhibition/test.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 400px;' />
+<img class='top-img lazyload' src='../img/2023/exhibition/3.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
-<p>クリエイター:たくや(coderdojo~)</p>
-<div class="box">
-  <h5>作品の説明</h5>
-  <p>作品の説明~~~~</p>
+<p>クリエイター:元気な深川っ子(CoderDojo長門)</p>
+<div class="contents">
+  <div class="box">
+    <h5>作品の説明</h5>
+    <p>深川小学校の仲良し３人組「りゅうのすけ」「くぼっち」「SOU」です。<br>授業でも導入されている「ｍBot」を使って、自動運転によるコース攻略に挑戦。mBotの機能をフルで使うべく一人１台、合計３台を活用し、①コースを走らせる、②パネルに文字を表示して応援する、③音楽で盛り上げるプログラムを組みました。<br>①「りゅうのすけ」は、走行を担当。ラインセンサーとスピードを工夫して、内側の細いラインのコースを走らせることに成功！<br>②「くぼっち」は、LEDパネルにチーム名や自分たちの名前を表示。見ている人に読みやすい光の配置を工夫！<br>③「SOU」は音楽を担当。何度も聞きながら、音の長さを調整し曲に仕上げ、曲と曲の間に光を入れるなどの工夫も実施！<br>３人で協力し、１つの作品に。パネルの表示と曲は、ｍBotがコース走る時間に合わせてあり、スタートとゴール時に盛り上がりました。</p>
+  </div>
+  <div class="box">
+    <h5>参考・参照元、工夫したところ</h5>
+    <p>攻略するため、参考に『改正版Makeblock公式ｍBotで楽しむレッツ！ロボットプログラミング』の書籍をみた。</p>
+  </div>
 </div>
-<div class="box">
-  <h5>参考・参照元、工夫したところ</h5>
-  <p>参考・参照元、工夫したところ...</p>
 </div>
-
-
-<a href="https://makenew.panasonic.jp/magazine/articles/045/" target="_blank" rel="noopener" class="button air">作品URL</a>
+<a href="https://youtu.be/Cl0zPaBE8TE" target="_blank" rel="noopener" class="button air">作品URL</a>
 
 <style type="text/css">
   .prev { display: table-cell; color: white; text-align: left;   }
@@ -34,10 +36,25 @@ permalink: /exhibition/3
   .next { display: table-cell; color: white; text-align: right;  }
   .nav a:link, .nav a:visited { color: white; }
   iframe{margin: 0 auto}
-  .box{width:450px; margin: 0 auto}
+  .box{width:auto; margin: 0 auto;padding-bottom:20px;}
   .box h5{text-align: left;}
+  .box p{text-align: left;}
   .air{margin-bottom:60px;}
-
+  .contents{width:auto; margin: 0 auto;padding:5px;}
+  /*content*/
+  .main_content{
+    display: block;
+    margin: 0 auto 12px;
+    text-align: center;
+    text-decoration: none;
+    width: 40%;
+  }
+  @media screen and (max-width: 1000px) {
+    .main_content {
+     padding: 8px 0;
+     width: 80%;
+   }
+  }      
   /* scratch wrapper */
   @media screen and (max-width: 570px){
     div.scratch-wrapper > iframe {
