scratchの埋め込みをなくし写真の埋め込みにしました。

--- a/_pages/exhibition/2023-11.md
+++ b/_pages/exhibition/2023-11.md
@@ -5,6 +5,9 @@ permalink: /expo/11
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">猫の箱庭</h1>
 <div class="main_content">
+
+{% comment %}
+/*スクラッチの埋め込みをしたい場合に用いる。*/
 {% if "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
 {% if "https://scratch.mit.edu/projects/782065331/" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
@@ -16,6 +19,9 @@ permalink: /expo/11
 {% else %}
 <img class='top-img lazyload' src='../img/2023/exhibition/11.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
+{% endcomment %}
+
+<img class='top-img lazyload' src='../img/2023/exhibition/11.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 <p>クリエイター:RP(奈良)</p>
 <div class="contents">
   <div class="box">
