--- a/_pages/exhibition/2023-16.md
+++ b/_pages/exhibition/2023-16.md
@@ -5,6 +5,9 @@ permalink: /expo/16
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">Yamaguchi maps</h1>
 <div class="main_content">
+
+{% comment %}
+/*スクラッチの埋め込みをしたい場合に用いる。*/
 {% if "マインクラフト（ワールド、レッドストーン回路、MakeCode、Modなど）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
 {% if "https://www.youtube.com/watch?v=ELKJmNPu9yg" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
@@ -16,6 +19,9 @@ permalink: /expo/16
 {% else %}
 <img class='top-img lazyload' src='../img/2023/exhibition/16.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
+{% endcomment %}
+
+<img class='top-img lazyload' src='../img/2023/exhibition/16.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 <p>クリエイター:けんちゃん()</p>
 <div class="contents">
   <div class="box">
