--- a/_pages/exhibition/2023-1.md
+++ b/_pages/exhibition/2023-1.md
@@ -5,6 +5,9 @@ permalink: /expo/1
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">コーディングで マレーシアを探索しよう！</h1>
 <div class="main_content">
+
+{% comment %}
+/*スクラッチの埋め込みをしたい場合に用いる。*/
 {% if "Webサイト（HTML/CSS、JavaScript、Pythonなど）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
 {% if "https://www.canva.com/design/DAFigu5zJnU/idy37rTovKKAyFa6E4g39A/watch?utm_content=DAFigu5zJnU&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
@@ -16,6 +19,9 @@ permalink: /expo/1
 {% else %}
 <img class='top-img lazyload' src='../img/2023/exhibition/1.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
+{% endcomment %}
+
+<img class='top-img lazyload' src='../img/2023/exhibition/1.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 <p>クリエイター:Lily(CoderDojo 前橋、CoderDojo 瑞穂)</p>
 <div class="contents">
   <div class="box">
