--- a/_pages/exhibition/2023-10.md
+++ b/_pages/exhibition/2023-10.md
@@ -5,6 +5,9 @@ permalink: /expo/10
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">アップアップシューティング</h1>
 <div class="main_content">
+
+{% comment %}
+/*スクラッチの埋め込みをしたい場合に用いる。*/
 {% if "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
 {% if "https://scratch.mit.edu/projects/661312780/" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
@@ -16,6 +19,9 @@ permalink: /expo/10
 {% else %}
 <img class='top-img lazyload' src='../img/2023/exhibition/10.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
+{% endcomment %}
+
+<img class='top-img lazyload' src='../img/2023/exhibition/10.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 <p>クリエイター:えんどうまめ(奈良)</p>
 <div class="contents">
   <div class="box">
