--- a/_pages/exhibition/2023-12.md
+++ b/_pages/exhibition/2023-12.md
@@ -5,6 +5,9 @@ permalink: /expo/12
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">対戦ゲーム</h1>
 <div class="main_content">
+
+{% comment %}
+/*スクラッチの埋め込みをしたい場合に用いる。*/
 {% if "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
 {% if "https://scratch.mit.edu/projects/881806999/" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
@@ -16,6 +19,9 @@ permalink: /expo/12
 {% else %}
 <img class='top-img lazyload' src='../img/2023/exhibition/12.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
+{% endcomment %}
+
+<img class='top-img lazyload' src='../img/2023/exhibition/12.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 <p>クリエイター:はづき(尾張)</p>
 <div class="contents">
   <div class="box">
