--- a/_pages/exhibition/2023-14.md
+++ b/_pages/exhibition/2023-14.md
@@ -5,6 +5,9 @@ permalink: /expo/14
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">心カフェメニューシステム</h1>
 <div class="main_content">
+
+{% comment %}
+/*スクラッチの埋め込みをしたい場合に用いる。*/
 {% if "電子工作（Raspberry Pi、Arduino、micro:bitなど）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
 {% if "https://youtu.be/wDVRVy8kfw4?si=iprBYbr_2ywtT6WD" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
@@ -16,6 +19,9 @@ permalink: /expo/14
 {% else %}
 <img class='top-img lazyload' src='../img/2023/exhibition/14.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
+{% endcomment %}
+
+<img class='top-img lazyload' src='../img/2023/exhibition/14.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 <p>クリエイター:あやめ(CoderDojo Owari)</p>
 <div class="contents">
   <div class="box">
