--- a/_pages/exhibition/2023-17.md
+++ b/_pages/exhibition/2023-17.md
@@ -5,6 +5,9 @@ permalink: /expo/17
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">モ〜レッツキャッチ！ゲーム</h1>
 <div class="main_content">
+
+{% comment %}
+/*スクラッチの埋め込みをしたい場合に用いる。*/
 {% if "電子工作（Raspberry Pi、Arduino、micro:bitなど）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
 {% if "https://ibb.co/WGxZCxS" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
@@ -16,6 +19,9 @@ permalink: /expo/17
 {% else %}
 <img class='top-img lazyload' src='../img/2023/exhibition/17.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
+{% endcomment %}
+
+<img class='top-img lazyload' src='../img/2023/exhibition/17.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 <p>クリエイター:ショーピー256(CoderDojo 倉敷　CoderDojo 吉備岡山)</p>
 <div class="contents">
   <div class="box">
