--- a/_pages/exhibition/2023-3.md
+++ b/_pages/exhibition/2023-3.md
@@ -5,6 +5,9 @@ permalink: /expo/3
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">コース攻略したぞ！</h1>
 <div class="main_content">
+
+{% comment %}
+/*スクラッチの埋め込みをしたい場合に用いる。*/
 {% if "ロボット（toio、LEGO、アーテックなど）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
 {% if "https://youtu.be/Cl0zPaBE8TE" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
@@ -16,6 +19,9 @@ permalink: /expo/3
 {% else %}
 <img class='top-img lazyload' src='../img/2023/exhibition/3.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
+{% endcomment %}
+
+<img class='top-img lazyload' src='../img/2023/exhibition/3.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 <p>クリエイター:元気な深川っ子(CoderDojo長門)</p>
 <div class="contents">
   <div class="box">
