--- a/_pages/exhibition/2023-4.md
+++ b/_pages/exhibition/2023-4.md
@@ -5,6 +5,9 @@ permalink: /expo/4
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">簡単なロブロックスオビー</h1>
 <div class="main_content">
+
+{% comment %}
+/*スクラッチの埋め込みをしたい場合に用いる。*/
 {% if "Webサイト（HTML/CSS、JavaScript、Pythonなど）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
 {% if "https://youtu.be/0UymyW3Khu8" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
@@ -16,6 +19,9 @@ permalink: /expo/4
 {% else %}
 <img class='top-img lazyload' src='../img/2023/exhibition/4.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
+{% endcomment %}
+
+<img class='top-img lazyload' src='../img/2023/exhibition/4.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 <p>クリエイター:がんにゃむ(奈良)</p>
 <div class="contents">
   <div class="box">
