--- a/_pages/exhibition/2023-8.md
+++ b/_pages/exhibition/2023-8.md
@@ -5,6 +5,9 @@ permalink: /expo/8
 ---
 <h1 style="padding-top: 100px; padding-bottom: 30px; ">タイマー＆スケジュールアプリ</h1>
 <div class="main_content">
+
+{% comment %}
+/*スクラッチの埋め込みをしたい場合に用いる。*/
 {% if "Scratch以外の言語による作品（Python、Ruby、p5.jsなどどんな言語・環境でもOK）" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
 {% if "https://drive.google.com/file/d/1SQFvm02Yb4tXKPxJs6NRLkXAKaFiyiL-/view?usp=drive_link" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
@@ -16,6 +19,9 @@ permalink: /expo/8
 {% else %}
 <img class='top-img lazyload' src='../img/2023/exhibition/8.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
+{% endcomment %}
+
+<img class='top-img lazyload' src='../img/2023/exhibition/8.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 <p>クリエイター:りんたろう(Coderdojo尾張、Coderdojo瑞穂)</p>
 <div class="contents">
   <div class="box">
