作品動画の公開方法を掲載

--- a/_posts/2023-07-03-expo.md
+++ b/_posts/2023-07-03-expo.md
@@ -33,6 +33,8 @@ tags: event
 ### オンライン作品展示のみ  
 DojoCon Japan 2023公式サイト上の専用ページで作品を掲載します。Scratch作品についてはプロジェクトを掲載しますが、それ以外については動画での掲載となります。
 
+作品動画の公開方法については「**[作品動画の公開方法について](/expo/how-to-upload-movie/)**」をご覧ください。
+
 ### オンライン作品展示 + 現地作品展示  
 オンライン作品展示に加え、現地作品展示を希望される方は、応募時に希望する旨を記載してください。希望者多数の場合は、抽選となります。
 
