tagを変更した際に出たエラーを直しました。

--- a/_pages/exhibition/2023-1.md
+++ b/_pages/exhibition/2023-1.md
@@ -8,7 +8,7 @@ permalink: /expo/1
 
 {% comment %}
 /*スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "Webサイト" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
+{% if "Webサイト" contains "Scratch" %}
 {% if "https://www.canva.com/design/DAFigu5zJnU/idy37rTovKKAyFa6E4g39A/watch?utm_content=DAFigu5zJnU&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
 <iframe src="https://www.canva.com/design/DAFigu5zJnU/idy37rTovKKAyFa6E4g39A/watch?utm_content=DAFigu5zJnU&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelinkembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
