--- a/_pages/exhibition/2023-14.md
+++ b/_pages/exhibition/2023-14.md
@@ -8,7 +8,7 @@ permalink: /expo/14
 
 {% comment %}
 /*スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "電子工作" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
+{% if "電子工作" contains "Scratch" %}
 {% if "https://youtu.be/wDVRVy8kfw4?si=iprBYbr_2ywtT6WD" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
 <iframe src="https://youtu.be/wDVRVy8kfw4?si=iprBYbr_2ywtT6WDembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
