--- a/_pages/exhibition/2023-16.md
+++ b/_pages/exhibition/2023-16.md
@@ -8,7 +8,7 @@ permalink: /expo/16
 
 {% comment %}
 /*スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "マインクラフト" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
+{% if "マインクラフト" contains "Scratch" %}
 {% if "https://www.youtube.com/watch?v=ELKJmNPu9yg" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
 <iframe src="https://www.youtube.com/watch?v=ELKJmNPu9ygembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
