--- a/_pages/exhibition/2023-3.md
+++ b/_pages/exhibition/2023-3.md
@@ -8,7 +8,7 @@ permalink: /expo/3
 
 {% comment %}
 /*スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "ロボット" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
+{% if "ロボット" contains "Scratch" %}
 {% if "https://youtu.be/Cl0zPaBE8TE" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
 <iframe src="https://youtu.be/Cl0zPaBE8TEembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
