--- a/_pages/exhibition/2023-9.md
+++ b/_pages/exhibition/2023-9.md
@@ -8,7 +8,7 @@ permalink: /expo/9
 
 {% comment %}
 /*スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "Scratch" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
+{% if "Scratch" contains "Scratch" %}
 {% if "https://scratch.mit.edu/projects/706260024/" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
 <iframe src="https://scratch.mit.edu/projects/706260024/embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
