--- a/_pages/exhibition/2023-17.md
+++ b/_pages/exhibition/2023-17.md
@@ -8,7 +8,7 @@ permalink: /expo/17
 
 {% comment %}
 /*スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "電子工作" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
+{% if "電子工作" contains "Scratch" %}
 {% if "https://ibb.co/WGxZCxS" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
 <iframe src="https://ibb.co/WGxZCxSembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
