--- a/_pages/exhibition/2023-4.md
+++ b/_pages/exhibition/2023-4.md
@@ -8,7 +8,7 @@ permalink: /expo/4
 
 {% comment %}
 /*スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "Webサイト" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
+{% if "Webサイト" contains "Scratch" %}
 {% if "https://www.youtube.com/watch?v=Tm5P76jfjuk" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
 <iframe src="https://www.youtube.com/watch?v=Tm5P76jfjukembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
