--- a/_pages/exhibition/2023-8.md
+++ b/_pages/exhibition/2023-8.md
@@ -8,7 +8,7 @@ permalink: /expo/8
 
 {% comment %}
 /*スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "Scratch以外の言語による作品" contains "Scratch（ゲーム、アニメーションなどScratchで作成したものすべて）" %}
+{% if "Scratch以外の言語による作品" contains "Scratch" %}
 {% if "https://drive.google.com/file/d/1SQFvm02Yb4tXKPxJs6NRLkXAKaFiyiL-/view?usp=drive_link" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
 <iframe src="https://drive.google.com/file/d/1SQFvm02Yb4tXKPxJs6NRLkXAKaFiyiL-/view?usp=drive_linkembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
