🤖 Upsert project page(s) by GitHub Actions

--- a/_pages/exhibition/2023-15.md
+++ b/_pages/exhibition/2023-15.md
@@ -22,7 +22,7 @@ permalink: /expo/15
 {% endcomment %}
 
 <img class='top-img lazyload' src='../img/2023/exhibition/15.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
-<p>クリエイター:ぶち(CoderDojo )</p>
+<p>クリエイター:ぶち(CoderDojo 住吉)</p>
 <div class="contents">
   <div class="box">
     <h5>作品の説明</h5>
