--- a/_pages/exhibition/2023-16.md
+++ b/_pages/exhibition/2023-16.md
@@ -22,7 +22,7 @@ permalink: /expo/16
 {% endcomment %}
 
 <img class='top-img lazyload' src='../img/2023/exhibition/16.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
-<p>クリエイター:けんちゃん(CoderDojo )</p>
+<p>クリエイター:けんちゃん(CoderDojo 長門)</p>
 <div class="contents">
   <div class="box">
     <h5>作品の説明</h5>
