展示会のymlを変更しました。

--- a/_pages/exhibition/2023-16.md
+++ b/_pages/exhibition/2023-16.md
@@ -1,17 +1,17 @@
 ---
 layout: default
-title: "Yamaguchi maps"
+title: "yamaguchi_maps"
 permalink: /expo/16
 ---
-<h1 style="padding-top: 100px; padding-bottom: 30px; ">Yamaguchi maps</h1>
+<h1 style="padding-top: 100px; padding-bottom: 30px; ">yamaguchi_maps</h1>
 <div class="main_content">
 
 {% comment %}
 /*スクラッチの埋め込みをしたい場合に用いる。*/
 {% if "マインクラフト" contains "Scratch" %}
-{% if "https://www.youtube.com/watch?v=ELKJmNPu9yg" contains "https://scratch.mit.edu/projects/" %}
+{% if "https://youtu.be/GPfSwXAaFSs" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
-<iframe src="https://www.youtube.com/watch?v=ELKJmNPu9ygembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://youtu.be/GPfSwXAaFSsembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 {%else%}
 <img class='top-img lazyload' src='../img/2023/exhibition/16.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />    
@@ -30,11 +30,11 @@ permalink: /expo/16
   </div>
   <div class="box">
     <h5>参考・参照元、工夫したところ</h5>
-    <p>使ったアプリ<br>Worldpainter<br>MediBang Paint Pro<br>DaVinci Resolve</p>
+    <p>使用したアプリ<br>Medbang Paint Pro...起伏図制作 <br>Worldpainter...読み込み<br>DaVinci Resolve...簡単な動画編集</p>
   </div>
 </div>
 </div>
-<a href="https://www.youtube.com/watch?v=ELKJmNPu9yg" target="_blank" rel="noopener" class="button air">作品URL</a>
+<a href="https://youtu.be/GPfSwXAaFSs" target="_blank" rel="noopener" class="button air">作品URL</a>
 
 <style type="text/css">
   .prev { display: table-cell; color: white; text-align: left;   }
