--- a/_pages/exhibition/2023-21.md
+++ b/_pages/exhibition/2023-21.md
@@ -1,40 +1,40 @@
 ---
 layout: default
-title: "モ〜レッツキャッチ！ゲーム"
-permalink: /expo/17
+title: "世界一難しいゲームを再現しました"
+permalink: /expo/21
 ---
-<h1 style="padding-top: 100px; padding-bottom: 30px; ">モ〜レッツキャッチ！ゲーム</h1>
+<h1 style="padding-top: 100px; padding-bottom: 30px; ">世界一難しいゲームを再現しました</h1>
 <div class="main_content">
 
 {% comment %}
 /*スクラッチの埋め込みをしたい場合に用いる。*/
-{% if "電子工作" contains "Scratch" %}
-{% if "https://vimeo.com/854617665" contains "https://scratch.mit.edu/projects/" %}
+{% if "Scratch" contains "Scratch" %}
+{% if "https://scratch.mit.edu/projects/873364568" contains "https://scratch.mit.edu/projects/" %}
 <div class="scratch-wrapper">
-<iframe src="https://vimeo.com/854617665embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="https://scratch.mit.edu/projects/873364568embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 {%else%}
-<img class='top-img lazyload' src='../img/2023/exhibition/17.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />    
+<img class='top-img lazyload' src='../img/2023/exhibition/21.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />    
 {% endif %}
 {% else %}
-<img class='top-img lazyload' src='../img/2023/exhibition/17.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='../img/2023/exhibition/21.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 {% endcomment %}
 
-<img class='top-img lazyload' src='../img/2023/exhibition/17.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
-<p>クリエイター:ショーピー256(CoderDojo 倉敷,吉備岡山)</p>
+<img class='top-img lazyload' src='../img/2023/exhibition/21.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<p>クリエイター:エージェント火の用心(CoderDojo 西尾)</p>
 <div class="contents">
   <div class="box">
     <h5>作品の説明</h5>
-    <p>micro:bitの付いた投げ縄を振り回して投げて牛を捕まえるゲームです。投げ縄が牛のツノに引っかかると牛が怒りだします。<br>牛の制作は家族全員でやりました。</p>
+    <p>【工夫したところ】プレーヤーを小さくしたところ。トラップなどの仕掛けがあるところ。</p>
   </div>
   <div class="box">
     <h5>参考・参照元、工夫したところ</h5>
-    <p>https://eleshop.jp/shop/g/g402628/</p>
+    <p>ありません。</p>
   </div>
 </div>
 </div>
-<a href="https://vimeo.com/854617665" target="_blank" rel="noopener" class="button air">作品URL</a>
+<a href="https://scratch.mit.edu/projects/873364568" target="_blank" rel="noopener" class="button air">作品URL</a>
 
 <style type="text/css">
   .prev { display: table-cell; color: white; text-align: left;   }
