大博覧会のaタブの追加と現地展示のタグ🏷️を追加しました

--- a/_pages/exhibition/2023-17.md
+++ b/_pages/exhibition/2023-17.md
@@ -30,7 +30,7 @@ permalink: /expo/17
   </div>
   <div class="box">
     <h5>参考・参照元、工夫したところ</h5>
-    <p>https://eleshop.jp/shop/g/g402628/</p>
+    <p>micro:bitを二つ使って連携させたところ</p>
   </div>
 </div>
 </div>
