Exec: bundle exec rake upsert_project_pages_by_data

--- a/_pages/exhibition/2023-8.md
+++ b/_pages/exhibition/2023-8.md
@@ -14,15 +14,19 @@ permalink: /expo/8
 <iframe src="https://drive.google.com/file/d/1SQFvm02Yb4tXKPxJs6NRLkXAKaFiyiL-/view?usp=drive_linkembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 {%else%}
-<img class='top-img lazyload' src='../img/2023/exhibition/8.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />    
+<img class='top-img lazyload' src='../img/2023/exhibition/8.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 {% else %}
 <img class='top-img lazyload' src='../img/2023/exhibition/8.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 {% endcomment %}
 
-<img class='top-img lazyload' src='../img/2023/exhibition/8.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
-<p>クリエイター:りんたろう(CoderDojo 尾張,瑞穂)</p>
+<a href="https://drive.google.com/file/d/1SQFvm02Yb4tXKPxJs6NRLkXAKaFiyiL-/view?usp=drive_link" target="_blank" rel="noopener" >
+  <img class='top-img lazyload' loading='lazy' alt='サムネイル画像'
+       style='margin-bottom: 10px; border-radius: 6px;width: 100%;'
+       src='../img/2023/exhibition/8.jpg' />
+</a>
+<p>クリエイター: りんたろう(CoderDojo 尾張,瑞穂)</p>
 <div class="contents">
   <div class="box">
     <h5>作品の説明</h5>
@@ -34,18 +38,24 @@ permalink: /expo/8
   </div>
 </div>
 </div>
-<a href="https://drive.google.com/file/d/1SQFvm02Yb4tXKPxJs6NRLkXAKaFiyiL-/view?usp=drive_link" target="_blank" rel="noopener" class="button air">作品URL</a>
+<a href="https://drive.google.com/file/d/1SQFvm02Yb4tXKPxJs6NRLkXAKaFiyiL-/view?usp=drive_link" target="_blank" rel="noopener" class="button air">
+  <i class="fas fa-scroll"></i>
+  作品を見る
+</a>
 
 <style type="text/css">
+  /* 使っていないスタイルのため一時的にコメントアウト
   .prev { display: table-cell; color: white; text-align: left;   }
   .toc  { display: table-cell; color: white; text-align: center; }
   .next { display: table-cell; color: white; text-align: right;  }
   .nav a:link, .nav a:visited { color: white; }
+  */
   iframe{margin: 0 auto}
   .box{width:auto; margin: 0 auto;padding-bottom:20px;}
   .box h5{text-align: left;}
   .box p{text-align: left;}
-  .air{margin-bottom:60px;}
+  a.air{margin-bottom:100px;}
+  a.air{text-decoration: none;}
   .contents{width:auto; margin: 0 auto;padding:5px;}
   /*content*/
   .main_content{
@@ -60,7 +70,7 @@ permalink: /expo/8
      padding: 8px 0;
      width: 80%;
    }
-  }      
+  }
   /* scratch wrapper */
   @media screen and (max-width: 570px){
     div.scratch-wrapper > iframe {
