--- a/_pages/exhibition/2023-12.md
+++ b/_pages/exhibition/2023-12.md
@@ -14,17 +14,17 @@ permalink: /expo/12
 <iframe src="https://scratch.mit.edu/projects/881806999/embed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 {%else%}
-<img class='top-img lazyload' src='../img/2023/exhibition/12.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='/img/2023/exhibition/12.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 {% else %}
-<img class='top-img lazyload' src='../img/2023/exhibition/12.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='/img/2023/exhibition/12.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 {% endcomment %}
 
 <a href="https://scratch.mit.edu/projects/881806999/" target="_blank" rel="noopener" >
   <img class='top-img lazyload' loading='lazy' alt='サムネイル画像'
        style='margin-bottom: 10px; border-radius: 6px;width: 100%;'
-       src='../img/2023/exhibition/12.jpg' />
+       src='/img/2023/exhibition/12.jpg' />
 </a>
 <p>クリエイター: はづき(CoderDojo 尾張)</p>
 <div class="contents">
