--- a/_pages/exhibition/2023-14.md
+++ b/_pages/exhibition/2023-14.md
@@ -14,17 +14,17 @@ permalink: /expo/14
 <iframe src="https://youtu.be/wDVRVy8kfw4?si=iprBYbr_2ywtT6WDembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 {%else%}
-<img class='top-img lazyload' src='../img/2023/exhibition/14.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='/img/2023/exhibition/14.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 {% else %}
-<img class='top-img lazyload' src='../img/2023/exhibition/14.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='/img/2023/exhibition/14.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 {% endcomment %}
 
 <a href="https://youtu.be/wDVRVy8kfw4?si=iprBYbr_2ywtT6WD" target="_blank" rel="noopener" >
   <img class='top-img lazyload' loading='lazy' alt='サムネイル画像'
        style='margin-bottom: 10px; border-radius: 6px;width: 100%;'
-       src='../img/2023/exhibition/14.jpg' />
+       src='/img/2023/exhibition/14.jpg' />
 </a>
 <p>クリエイター: あやめ(CoderDojo 尾張)</p>
 <div class="contents">
