--- a/_pages/exhibition/2023-18.md
+++ b/_pages/exhibition/2023-18.md
@@ -14,17 +14,17 @@ permalink: /expo/18
 <iframe src="https://drive.google.com/file/d/1-DZChpe9hge014qggKtzztgvZvN6YkL1/view?usp=sharingembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 {%else%}
-<img class='top-img lazyload' src='../img/2023/exhibition/18.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='/img/2023/exhibition/18.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 {% else %}
-<img class='top-img lazyload' src='../img/2023/exhibition/18.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='/img/2023/exhibition/18.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 {% endcomment %}
 
 <a href="https://drive.google.com/file/d/1-DZChpe9hge014qggKtzztgvZvN6YkL1/view?usp=sharing" target="_blank" rel="noopener" >
   <img class='top-img lazyload' loading='lazy' alt='サムネイル画像'
        style='margin-bottom: 10px; border-radius: 6px;width: 100%;'
-       src='../img/2023/exhibition/18.jpg' />
+       src='/img/2023/exhibition/18.jpg' />
 </a>
 <p>クリエイター: てるた(CoderDojo 西尾)</p>
 <div class="contents">
