--- a/_pages/exhibition/2023-3.md
+++ b/_pages/exhibition/2023-3.md
@@ -14,17 +14,17 @@ permalink: /expo/3
 <iframe src="https://youtu.be/Cl0zPaBE8TEembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 {%else%}
-<img class='top-img lazyload' src='../img/2023/exhibition/3.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='/img/2023/exhibition/3.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 {% else %}
-<img class='top-img lazyload' src='../img/2023/exhibition/3.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='/img/2023/exhibition/3.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 {% endcomment %}
 
 <a href="https://youtu.be/Cl0zPaBE8TE" target="_blank" rel="noopener" >
   <img class='top-img lazyload' loading='lazy' alt='サムネイル画像'
        style='margin-bottom: 10px; border-radius: 6px;width: 100%;'
-       src='../img/2023/exhibition/3.jpg' />
+       src='/img/2023/exhibition/3.jpg' />
 </a>
 <p>クリエイター: 元気な深川っ子(CoderDojo 長門)</p>
 <div class="contents">
