--- a/_pages/exhibition/2023-4.md
+++ b/_pages/exhibition/2023-4.md
@@ -14,17 +14,17 @@ permalink: /expo/4
 <iframe src="https://www.youtube.com/watch?v=Tm5P76jfjukembed" allowtransparency="true" width="542" height="450" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 {%else%}
-<img class='top-img lazyload' src='../img/2023/exhibition/4.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='/img/2023/exhibition/4.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 {% else %}
-<img class='top-img lazyload' src='../img/2023/exhibition/4.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
+<img class='top-img lazyload' src='/img/2023/exhibition/4.jpg' alt='サムネイル画像' loading='lazy'  style='margin-bottom: 10px; border-radius: 6px;width: 100%;' />
 {% endif %}
 {% endcomment %}
 
 <a href="https://www.youtube.com/watch?v=Tm5P76jfjuk" target="_blank" rel="noopener" >
   <img class='top-img lazyload' loading='lazy' alt='サムネイル画像'
        style='margin-bottom: 10px; border-radius: 6px;width: 100%;'
-       src='../img/2023/exhibition/4.jpg' />
+       src='/img/2023/exhibition/4.jpg' />
 </a>
 <p>クリエイター: がんにゃむ(CoderDojo 奈良)</p>
 <div class="contents">
